<?xml version="1.0"?>
<package>
  <name>inan_core</name>
  <version>0.0.1</version>
  <description>core software package for rover inan</description>

  <maintainer email="celaleddinhidayetoglu@gmail.com">Celaleddin Hidayetoglu</maintainer>
  <maintainer email="ismailpamir94@gmail.com">Ismail Pamir</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>joy</run_depend>

  <export>

  </export>
</package>
